--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
             </article>
             <aside class="col-sm-7">
                 <h4>Our Gallery:</h4> <br />
-                
+                <a href="https://instawidget.net/v/user/univ.narotamasby" id="link-a56fcb665e787dc63dfcd2d90837ffc021a630830777e0e45182e768acbf9293">@univ.narotamasby</a>
+                <script src="https://instawidget.net/js/instawidget.js?u=a56fcb665e787dc63dfcd2d90837ffc021a630830777e0e45182e768acbf9293&width=300px"></script>
             </aside>
           </div>
         </div>
