tidak bisa drag dan save image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <img src="./img/narotama.png" alt="Narotama Logo" width="100px" height="100px">
+          <img src="./img/narotama.png" alt="Narotama Logo" width="100px" height="100px" draggable="false" style="pointer-events:none">
         </div>
       </div>
       <br />
@@ -76,21 +76,21 @@
                 </ul>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./img/narotama-a2.png" alt="Los Angeles" width="100%" height="100%">
+                    <img src="./img/narotama-a2.png" alt="Los Angeles" width="100%" height="100%" draggable="false" style="pointer-events:none">
                     <div class="carousel-caption">
                       <h5><kbd>Narotama University</kbd></h5>
                       <p><kbd>One of the best universities in Indonesia!</kbd></p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/narotama-masjid.png" alt="Chicago" width="100%" height="100%">
+                    <img src="./img/narotama-masjid.png" alt="Chicago" width="100%" height="100%" draggable="false" style="pointer-events:none">
                     <div class="carousel-caption">
                       <h5><kbd>BAITURRACHMAH Mosque</kbd></h5>
                       <p><kbd>One of the buildings in Narotama University Campus!</kbd></p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/narotama-e.png" alt="New York" width="100%" height="100%">
+                    <img src="./img/narotama-e.png" alt="New York" width="100%" height="100%" draggable="false" style="pointer-events:none">
                     <div class="carousel-caption">
                       <h5><kbd>Plaza E</kbd></h5>
                       <p><kbd>One of the buildings for teaching and learning activities in Narotama University Campus!</kbd></p>
@@ -108,11 +108,11 @@
             <aside class="col-sm-5">
               <hr>
               <p>Rector</p>
-              <img class="img-fluid" src="./img/img_avatar.png" alt="Image Rektor" width="150px">
+              <img class="img-fluid" src="./img/img_avatar.png" alt="Image Rektor" width="150px" draggable="false" style="pointer-events:none">
               <p><i>&nbsp;&nbsp;Full Name</i></p>
               <hr>
               <p>Vice Rector</p>
-              <img class="img-fluid" src="./img/img_avatar.png" alt="Image Rektor" width="150px">
+              <img class="img-fluid" src="./img/img_avatar.png" alt="Image Rektor" width="150px" draggable="false" style="pointer-events:none">
               <p><i>&nbsp;&nbsp;Full Name</i></p>
               <hr>
             </aside>
@@ -122,13 +122,13 @@
           <h3>Faculty in Narotama University</h3>
           <div class="row">
             <div class="col-sm-6">
-              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%">
+              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%" draggable="false" style="pointer-events:none">
               <div class="carousel-caption">
                 <h5><p><kbd>Faculty of Computer Science</kbd></p></h5>
               </div>
             </div>
             <div class="col-sm-6">
-              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%">
+              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%" draggable="false" style="pointer-events:none">
               <div class="carousel-caption">
                 <h4><p><kbd>Faculty of Law</kbd></p></h4>
               </div>
@@ -136,13 +136,13 @@
           </div>
           <div class="row">
             <div class="col-sm-6">
-              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%">
+              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%" draggable="false" style="pointer-events:none">
               <div class="carousel-caption">
                 <h4><p><kbd>Faculty of Engineering</kbd></p></h4>
               </div>
             </div>
             <div class="col-sm-6">
-              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%">
+              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%" draggable="false" style="pointer-events:none">
               <div class="carousel-caption">
                 <h6><p><kbd>Faculty of Economy and Business</kbd></p></h6>
               </div>
@@ -151,7 +151,7 @@
           <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
-              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%">
+              <img class="img-thumbnail img-fluid" src="./img/narotama-e2.png" alt="narotama" width="100%" height="100%" draggable="false" style="pointer-events:none">
               <div class="carousel-caption">
                 <h6><p><kbd>Faculty of Science Education</kbd></p></h6>
               </div>
